text background color contrast fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,7 +28,7 @@ body {
   --tertiary: #003638;
 
   --blue: #2e82f7;
-  --orange: #f4b03e;
+  --orange: #dfa94d;
   --green: #5fcf9c;
   --cyan: #5ac9ca;
 }
